--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -156,7 +156,8 @@
     "\n",
     "To start using Senzing G2Engine, create and initialize an instance.\n",
     "This should be done once per process.\n",
-    "###### Parameters\n",
+    "\n",
+    "**Parameters**\n",
     "\n",
     "- **module_name:** (str) A short name given to this instance of the G2Engine\n",
     "  object.\n",
@@ -208,7 +209,7 @@
     "\n",
     "Alternatively `initWithConfigID()` can be used to specify a configuration.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **module_name:** (str) A short name given to this instance of the G2Engine\n",
     "  object.\n",
@@ -243,7 +244,7 @@
     "The `reinit()` function may be used to reinitialize the engine\n",
     "using a specified initConfigID.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **config_id_bytearray:** (bytearray) The configID that you want to initialize the engine with."
    ]
@@ -295,7 +296,7 @@
     "Senzing engine configuration.\n",
     "The call will assign a long integer to a user-designated variable\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **configuration_id_bytearray:** (bytearray) The identifier value for the engine configuration.\n",
     "  The result of function call is returned here"
@@ -328,7 +329,7 @@
     "-- the function itself will return \"0\" upon success.\n",
     "The exportConfig function accepts the following parameters as input:\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
     "- **config_id_bytearray:** (bytearray) The identifier value for the engine configuration\n",
@@ -362,7 +363,7 @@
     "Call `stats()` to retrieve workload statistics for the current process.\n",
     "These statistics will automatically reset after retrieval.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
@@ -394,7 +395,7 @@
     "modified time and January 1, 1970 12:00am GMT (epoch time).\n",
     "The call will assign a long integer to a user-designated buffer\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **last_modified_time_bytearray:** (bytearray) The last modified time. The result of function\n",
     "  call is returned here\n"
@@ -561,7 +562,7 @@
     "The `addRecord()` function returns \"0\" upon success, and accepts four\n",
     "parameters as input:\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record\n",
     "  is associated with.\n",
@@ -599,7 +600,7 @@
     "\n",
     "Alternatively `addRecordWithReturnedRecordID()` can be used to return the record ID\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record\n",
     "  is associated with.\n",
@@ -641,7 +642,7 @@
     "It behaves identically to addRecord(),\n",
     "but returns a json document containing the IDs of the affected entities.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record is associated\n",
     "  with.  This value is configurable to the system.\n",
@@ -679,7 +680,7 @@
     "### addRecordWithInfoWithReturnedRecordID\n",
     "\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record is associated\n",
     "  with.  This value is configurable to the system.\n",
@@ -731,7 +732,7 @@
     "and it can be called as many times as desired and from multiple threads at\n",
     "the same time.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record is associated\n",
     "  with.  This value is configurable to the system\n",
@@ -783,7 +784,7 @@
     "It behaves identically to `replaceRecord()`,\n",
     "but also returns a json document containing the IDs of the affected entities.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record is associated\n",
     "  with.  This value is configurable to the system.\n",
@@ -841,7 +842,7 @@
    "source": [
     "### reevaluateRecord\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record is associated\n",
     "  with.  This value is configurable to the system.\n",
@@ -869,7 +870,7 @@
    "source": [
     "### reevaluateRecordWithInfo\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record is associated\n",
     "  with.  This value is configurable to the system.\n",
@@ -902,7 +903,7 @@
    "source": [
     "### reevaluateEntity\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **entity_id:** (int) The entity ID for the entity to be analyzed"
    ]
@@ -959,7 +960,7 @@
    "source": [
     "### reevaluateEntityWithInfo\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **entity_id:** (int) The entity ID for the entity to be analyzed\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a string"
@@ -1337,7 +1338,7 @@
     "The `getRedoRecord()` function returns \"0\" upon success and an empty response\n",
     "if there is nothing to do.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
@@ -1365,7 +1366,7 @@
    "source": [
     "### processWithInfo\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **response_bytearray:** (bytearray) the input record to add\n",
     "- **process_response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
@@ -1393,11 +1394,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### process\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **response_bytearray:** (bytearray) the input record to process"
    ]
@@ -1422,7 +1425,7 @@
    "source": [
     "### processWithResponse\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **response_bytearray:** (bytearray) the input record to add\n",
     "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
@@ -1457,7 +1460,7 @@
     "process and if you do `countRedoRecords()` again it will return 0)\n",
     "Has potential to create more redo records in certian situations.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
@@ -1492,7 +1495,7 @@
     "but also returns a json document containing the IDs of the affected entities.\n",
     "It accepts the following parameters:\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
     "- **info_bytearray:** (bytearray) Returns the \"withInfo\" section "
@@ -1544,7 +1547,7 @@
     "`deleteRecord()` can be called as many times as desired and from multiple\n",
     "threads at the same time.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record is associated\n",
     "  with.  This value is configurable to the system.\n",
@@ -1577,7 +1580,7 @@
     "`deleteRecordWithInfo()` behaves the same as `deleteRecord()`\n",
     "but also returns a json document containing the IDs of the affected entities.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record is associated\n",
     "  with. This value is configurable to the system.\n",
@@ -1687,7 +1690,7 @@
     "`getRecord()` can be called as many times as desired and from multiple\n",
     "threads at the same time.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record is associated\n",
     "  with.  This value is configurable to the system.\n",
@@ -1723,7 +1726,7 @@
    "source": [
     "#### checkRecord\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **input_record:** (str) A JSON document with the attribute data for the record to check with the \"DATA_SOURCE\" field\n",
     "- **record_list:** (str) A JSON document with the datasource codes and recordID's of the records to check against\n",
@@ -1790,7 +1793,7 @@
     "Use `getEntityByRecordID()` to retrieve entity data based on the ID of a\n",
     "resolved identity.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record is associated\n",
     "  with.  This value is configurable to the system.\n",
@@ -1830,7 +1833,7 @@
     "Use `getEntityByEntityID()` to retrieve entity data based on the ID of a\n",
     "resolved identity.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **entity_id:** (int) The numeric ID of a resolved entity\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
@@ -1864,7 +1867,7 @@
    "source": [
     "#### getVirtualEntityByRecordID\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **record_list:** (str) A JSON document with the datasource codes and recordID's of the records to check against\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
@@ -1907,7 +1910,7 @@
     "Use `searchByAttributes()` to retrieve entity data based on\n",
     "a user-specified set of entity attributes.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **data_as_json:** (str) A JSON document with the attribute data to search for.\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
@@ -2128,7 +2131,7 @@
     "\n",
     "The `findPathByEntityID()` function can be used to find single relationship paths between two entities. Paths are found using known relationships with other entities.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **entity_id_start:** (int) The entity ID for the starting entity of the search path\n",
     "- **entity_id_end:** (int) The entity ID for the ending entity of the search path\n",
@@ -2183,7 +2186,7 @@
     "can be used to find single relationship paths between two entities.\n",
     "Paths are found using known relationships with other entities.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code_start:** (str) The data source for the starting entity of the\n",
     "  search path\n",
@@ -2256,7 +2259,7 @@
     "A \"preferred exclude\" may be done by specifying the\n",
     "`G2_FIND_PATH_PREFER_EXCLUDE` control flag.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **entity_id_start:** (int) The entity ID for the starting entity of the search path\n",
     "- **entity_id_end:** (int) The entity ID for the ending entity of the search path\n",
@@ -2326,7 +2329,7 @@
     "A \"preferred exclude\" may be done by specifying the\n",
     "`G2_FIND_PATH_PREFER_EXCLUDE` control flag.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code_start:** (str) The data source for the starting entity of the\n",
     "  search path\n",
@@ -2401,7 +2404,7 @@
     "`findPathExcludingByEntityID()` and `findPathExcludingByRecordID()`\n",
     "functions use.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **entity_id_start:** (int) The entity ID for the starting entity of the search path\n",
     "- **entity_id_end:** (int) The entity ID for the ending entity of the search path\n",
@@ -2473,7 +2476,7 @@
     "`findPathExcludingByEntityID()` and `findPathExcludingByRecordID()`\n",
     "functions use.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code_start:** (str) The data source for the starting entity of the\n",
     "  search path\n",
@@ -2575,7 +2578,7 @@
     "This includes the requested entities, paths between them, and relations to\n",
     "other nearby entities.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **max_degree:** (int) The maximum number of degrees in paths between search\n",
     "  entities\n",
@@ -2643,7 +2646,7 @@
     "This includes the requested entities, paths between them, and relations to\n",
     "other nearby entities.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **record_list_as_json:** (str) A list of entities, specified by Record ID\n",
     "  (JSON document)\n",
@@ -2794,7 +2797,7 @@
     "rest of the entity data, and show why they are connected.\n",
     "This is calculated based on the features that record data represents.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The data source for the record to be analyzed\n",
     "- **entity_id:** (int) The entity ID for the entity to be analyzed\n",
@@ -2828,7 +2831,7 @@
     "### whyEntities\n",
     "\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **entity_id_1:** (int) The entity ID for the first entity to be analyzed\n",
     "- **entity_id_2:** (int) The entity ID for the second entity to be analyzed\n",
@@ -2862,7 +2865,7 @@
    "source": [
     "### whyRecords\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code_1:** (str) The name of the first data source the record\n",
     "  is associated with.\n",
@@ -2903,7 +2906,7 @@
    "source": [
     "### whyEntityByEntityID\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **entity_id:** (int) The entity ID for the entity to be analyzed\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
@@ -2935,7 +2938,7 @@
    "source": [
     "### whyEntityByRecordID\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **datasource_code:** (str) The name of the data source the record\n",
     "  is associated with.\n",
@@ -2970,7 +2973,7 @@
    "source": [
     "### howEntityByEntityID\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **entity_id:** (int) The entity ID for the entity to be analyzed\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
@@ -3088,7 +3091,7 @@
     "object in JSON format.\n",
     "First, use the `exportJSONEntityReport()` method to generate the `export_handle`.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **g2_engine_flags:** (int **[optional]**) control flags (applicable flags listed here [exportJSONEntityReport flags](senzing-G2Engine-flags.ipynb#exportJSONEntityReport))"
    ]
@@ -3121,7 +3124,7 @@
     "Note that successive calls of `fetchNext()` will export successive rows of\n",
     "entity data.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **export_handle:** (int) A long integer from which resolved entity data may be\n",
     "  read and exported.\n",
@@ -3156,7 +3159,7 @@
    "source": [
     "### closeExport\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **export_handle:** (int) A long integer from which resolved entity data may be\n",
     "  read and exported."
@@ -3186,7 +3189,7 @@
     "First, use the `exportCSVEntityReport()` method to generate a long integer,\n",
     "referred to here as an 'export_handle'.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **csv_column_list:** (str) A comma-separated list of column names for the CSV\n",
     "  export. (These are listed a little further down.)\n",
