--- a/notebooks/python/senzing-G2Product-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Product-sdk-api-specification.ipynb
@@ -172,7 +172,8 @@
     "\n",
     "To start using Senzing G2Product, create and initialize an instance.\n",
     "This should be done once per process.\n",
-    "###### Parameters\n",
+    "\n",
+    "**Parameters**\n",
     "\n",
     "- **module_name:** (str) A short name given to this instance of the G2Product\n",
     "  object.\n",
