--- a/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -185,7 +185,7 @@
     "Create a new instance of the config manager and assign it to a variable.\n",
     "Then, call the appropriate initialization method to initialize the config manager.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **module_name:** (str) A short name given to this instance of the G2 engine (i.e. your G2Module object)\n",
     "- **senzing_config_json:** (JSON str) A JSON document containing system parameters.\n",
@@ -217,7 +217,7 @@
     "\n",
     "Use `addConfig()` to add a configuration JSON document to the data repository.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **senzing_model_config_json:** (JSON str) The configuration JSON document.\n",
     "- **config_comment:** (str) A free-form string of comments describing the configuration document.\n",
@@ -250,7 +250,8 @@
     "###  getConfigList\n",
     "\n",
     "Use `getConfigList()` to retrieve a list of the configuration JSON documents contained in the data repository.\n",
-    "###### Parameters\n",
+    "\n",
+    "**Parameters**\n",
     "\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
@@ -279,10 +280,9 @@
     "\n",
     "Use `getConfig()` to retrieve a specific configuration JSON document from the data repository. \n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **config_id_bytearray:** (bytearray) The configID for the config document that you wish to retrieve.\n",
-    "\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -312,7 +312,7 @@
     "\n",
     "Use `setDefaultConfigID()` to set the default configuration JSON document in the data repository. \n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **config_id_bytearray:** (bytearray or int) The configuration ID for a configuration JSON document previously added to the database."
    ]
@@ -338,7 +338,7 @@
     "\n",
     "Use `getDefaultConfigID()` to retrieve a specific configuration JSON document from the data repository.\n",
     "\n",
-    "###### Parameters\n",
+    "**Parameters**\n",
     "\n",
     "- **config_id_bytearray:** (bytearray) Returns the configID for the current default configuration, or 0 if none is set."
    ]
@@ -392,6 +392,8 @@
    "metadata": {},
    "source": [
     "### close\n",
+    "\n",
+    "**Parameters** \n",
     "\n",
     "- **config_handle:** (int) variable containg the the number of the used config"
    ]
